Lotsa updates i cant even keep track

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="delete">Delete</string>
     <string name="add_reminder">Add Reminder</string>
     <string name="edit">Edit</string>
+    <string name="add_todo_hint">Try to keep it simple</string>
 </resources>
